--- a/src/llm_interfaces/CMakeLists.txt
+++ b/src/llm_interfaces/CMakeLists.txt
@@ -25,6 +25,7 @@ set(DEPENDENCIES
 rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/SceneInterpretation.srv"
   "srv/UserInteraction.srv"
+  "srv/PackItems.srv"
   DEPENDENCIES ${DEPENDENCIES} # Add packages that above messages depend on, in this case geometry_msgs for Sphere.msg
 )
 
