--- a/src/pkg_pack_item_server/package.xml
+++ b/src/pkg_pack_item_server/package.xml
@@ -12,6 +12,7 @@
   <test_depend>ament_pep257</test_depend>
   <test_depend>python3-pytest</test_depend>
   <depend>llm_interfaces</depend>  
+  <depend>pkg_pack_item_server</depend>
 
   <export>
     <build_type>ament_python</build_type>
