--- a/src/llm_interfaces/package.xml
+++ b/src/llm_interfaces/package.xml
@@ -16,6 +16,9 @@
   <depend>rosidl_typesupport_interface</depend>
   <depend>object_detector_tensorflow_interfaces</depend>
   <depend>sensor_msgs</depend>
+  <depend>std_msgs</depend>
+  <depend>geometry_msgs</depend>
+  
   <member_of_group>rosidl_interface_packages</member_of_group>'
   <exec_depend>rosidl_default_runtime</exec_depend>
   
