--- a/src/llm_interfaces/CMakeLists.txt
+++ b/src/llm_interfaces/CMakeLists.txt
@@ -16,11 +16,15 @@ find_package(std_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(object_detector_tensorflow_interfaces REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
+find_package(aip_grasp_planning_interfaces REQUIRED)
+find_package(aip_packing_planning_interfaces REQUIRED)
 
 set(DEPENDENCIES 
   "sensor_msgs"
   "object_detector_tensorflow_interfaces"
   "geometry_msgs"
+  "aip_grasp_planning_interfaces"
+  "aip_packing_planning_interfaces"
 )
 #  "object_detector_tensorflow_interfaces"
 
@@ -30,9 +34,6 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/UserInteraction.srv"
   "srv/PackItems.srv"
   "srv/WebsiteFeedback.srv"
-  "msg/Package.msg"
-  "msg/PackageSequence.msg"
-  "msg/CylinderCombination.msg"
   DEPENDENCIES ${DEPENDENCIES} # Add packages that above messages depend on, in this case geometry_msgs for Sphere.msg
 )
 
