--- a/src/llm_interfaces/package.xml
+++ b/src/llm_interfaces/package.xml
@@ -18,6 +18,8 @@
   <depend>sensor_msgs</depend>
   <depend>std_msgs</depend>
   <depend>geometry_msgs</depend>
+  <depend>aip_packing_planning_interfaces</depend>
+  <depend>aip_grasp_planning_interfaces</depend>
   
   <member_of_group>rosidl_interface_packages</member_of_group>'
   <exec_depend>rosidl_default_runtime</exec_depend>
