LLM Kontext erweitert mit Materialliste

--- a/src/llm_interfaces/CMakeLists.txt
+++ b/src/llm_interfaces/CMakeLists.txt
@@ -34,6 +34,7 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/UserInteraction.srv"
   "srv/PackItems.srv"
   "srv/WebsiteFeedback.srv"
+  "srv/SetGetAllTypes.srv"
   DEPENDENCIES ${DEPENDENCIES} # Add packages that above messages depend on, in this case geometry_msgs for Sphere.msg
 )
 
